Add landing page layout with styles and image
Created index.css for basic styling and layout, added a header, main content, and footer to index.html, and included a centered image (apple.png). The page now features a 'Coming Soon' message and improved structure for future content.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Test</title>
+        <link href="index.css" rel="stylesheet">
+    </head>
+
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with GitHub Pages.</p>
+
+        <header>Header</header>
+        
+        <main>
+            <div class="centerDiv">
+                <h1>Coming Soon..</h1>
+            </div>
+
+            <p>From roblox to software engineering, this will have everything you need to know about me.</p>
+            
+            <div id="imageDiv">
+                <img src="images/apple.png" width="250px" height="250px" style="border-radius: 100%;">
+            </div>
+        </main>
+
+        <footer>Footer</footer>
     </body>
 </html>
