--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Test</title>
-        <link href="index.css" rel="stylesheet">
-    </head>
-
-    <body>
-
-        <header>Header</header>
-        
-        <main>
-            <div class="centerDiv">
-                <h1>Coming Soon..</h1>
-            </div>
-
-            <p>From roblox to software engineering, this will have everything you need to know about me.</p>
-            
-            <div id="imageDiv">
-                <img src="images/apple.png" width="250px" height="250px" style="border-radius: 100%;">
-            </div>
-        </main>
-
-        <footer>Footer</footer>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="index.css">
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      padding: 50px;
+    }
+    .button {
+      display: inline-block;
+      margin: 20px;
+      padding: 20px 40px;
+      font-size: 1.5rem;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      border-radius: 10px;
+      transition: 0.3s;
+    }
+    .button:hover {
+      background-color: #0056b3;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to My Portfolio</h1>
+  <p>Select which part you'd like to explore:</p>
+  <a class="button" href="/roblox">🎮 Roblox Game Dev</a>
+  <a class="button" href="/software">💻 Software Engineering</a>
+</body>
 </html>
