--- a/index.html
+++ b/index.html
@@ -1,43 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>My Portfolio</title>
-  <!-- <link rel="stylesheet" href="index.css"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-  
-</head>
-<body class="body">
-  <header class="header bg-primary">
-    <div id="titleAnimationBlock">
-      <h1 class="h1" style="color: white;">Welcome to My Portfolio</h1>
-      <div class="div bg-primary" id="titleBlocker"> </div>
-    </div>
 
-    
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+  <header class="header d-flex justify-content-between align-items-center bg-primary p-3">
+  <!-- LEFT SIDE -->
+  <div class="d-flex flex-column justify-content-between text-white">
+  <div id="titleAnimationBlock">
+    <h1 class="h1">Welcome to My Portfolio</h1>
+    <div class="bg-primary" id="titleBlocker"></div>
+  </div>
+  <div id="subheader">
+    <h2 class="h2 mb-0" style="color: black;">Select which part you'd like to explore:</h2>
+  </div>
+</div>
+
+  <!-- RIGHT SIDE -->
+  <div>
+    <div class="dropdown">
+      <button class="btn btn-info dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
+        Links
+      </button>
+      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Placeholder 1</a>
+        <a class="dropdown-item" href="#">Placeholder 2</a>
+        <a class="dropdown-item" href="#">Placeholder 3</a>
+      </div>
+    </div>
+  </div>
+
+
+
+
     <style>
       #titleBlocker {
         display: block;
+        width: 50%;
         height: 50px;
-        /* position: absolute; */
-        animation: titleUnblock 2s, ease-out forwards;
-        animation-fill-mode: forwards;
+        background-color: white;
+        position: absolute;
+        top: 0px;
+        /* start at top of parent */
+        left: 0px;
+        z-index: 5;
+
+        animation: titleUnblock 2s ease-out forwards;
       }
 
       @keyframes titleUnblock {
         from {
-          transform: translateY(-50px);
+          transform: translateY(0px);
         }
+
         to {
           transform: translateY(-100px);
         }
       }
     </style>
-
-    <div id="subheader">
-      <h2>Select which part you'd like to explore:</h2>
-    </div>
 
     <style>
       #subheader {
@@ -51,27 +82,50 @@
         from {
           opacity: 0;
         }
+
         to {
           opacity: 1;
         }
       }
     </style>
-  
+
   </header>
   <main>
-     <!-- <div class="container-fluid" href="/roblox">🎮 Roblox Game Dev</div>
+    <!-- <div class="container-fluid" href="/roblox">🎮 Roblox Game Dev</div>
      <div class="button" href="/software">💻 Software Engineering</div>
     <div class="button" href="/software">🌎 About me</div> -->
-  <!-- Make a card that is vertical -->
-  <div class="card" style="width: 18rem;">
-  <img src="images/apple.png" class="card-img-top" alt="A picture of something.">
-  <div class="card-body">
+    <div style="display: block; height: 1px;"></div> <!-- filler -->
+    <div>
+      <div class="h3 mt-3 text-center mx-auto w-50">Insights</div>
+      <hr class="mx-auto" style="width: 50%; border-top: 2px solid;">
 
-    <h5 class="card-title">About me</h5>
-    <p class="card-text">An overview of where I’ve been, what I’ve learned, and where I’m headed.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
-  </div>
-</div>
+      <div class="card mx-auto mt-2 mb-5" style="width: 50%;"> <!-- Software Engineering */ -->
+        <div class="card-body">
+
+          <h5 class="card-title">💻 | Software Engineering</h5>
+          <hr>
+          <p class="card-text">An overview of where I’ve been, what I’ve learned, and where I’m headed.</p>
+          <a href="/software" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card mx-auto mt-5 mb-5" style="width: 50%;"> <!-- about me */ -->
+
+        <div class="card-body">
+
+          <h5 class="card-title">🛠️ | Roblox Studio</h5>
+          <hr>
+          <p class="card-text">An overview of where I’ve been, what I’ve learned, and where I’m headed.</p>
+          <a href="/roblox" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="fs-1 text-light mx-auto" style="width: fit-content;">About me</div>
+
+      <hr style="width: 30%; border-top: 3px solid #07213d;" class="mx-auto my-4">
+
+      <h1>filler</h1>
   </main>
 </body>
+
 </html>
