Added roblox page
Had a ton of new features ready:

- Roblox page is pretty much done
- SWE still not started

Home page has been improved, adding footers to the rest soon.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta charset="UTF-8">
   <title>My Portfolio</title>
   <link rel="stylesheet" href="index.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -30,13 +31,11 @@
   <!-- RIGHT SIDE -->
   <div>
     <div class="dropdown">
-      <button class="btn btn-info dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
-        Links
-      </button>
+      <button class="btn btn-info dropdown-toggle text-light" type="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">Quick Links</button>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" href="#">Placeholder 1</a>
-        <a class="dropdown-item" href="#">Placeholder 2</a>
-        <a class="dropdown-item" href="#">Placeholder 3</a>
+        <a class="dropdown-item disabled" href="index.html">Home</a>
+        <a class="dropdown-item" href="/software">Software Engineer/Related</a>
+        <a class="dropdown-item" href="/roblox">Roblox Studio</a>
       </div>
     </div>
   </div>
@@ -90,13 +89,12 @@
     </style>
 
   </header>
+  Add accomplishments like nvision, robotics, the manuel, etc.
+  <!-- v-- MAIN SECTION --v -->
   <main>
-    <!-- <div class="container-fluid" href="/roblox">🎮 Roblox Game Dev</div>
-     <div class="button" href="/software">💻 Software Engineering</div>
-    <div class="button" href="/software">🌎 About me</div> -->
-    <div style="display: block; height: 1px;"></div> <!-- filler -->
+   <div class="display-5 text-white text-center" style="display: block; height: 200px;">↓Scroll Down↓</div> <!-- filler -->
     <div>
-      <div class="h3 mt-3 text-center mx-auto w-50">Insights</div>
+      <div class="h2 mt-3 text-center mx-auto w-50">Quick Cards</div>
       <hr class="mx-auto" style="width: 50%; border-top: 2px solid;">
 
       <div class="card mx-auto mt-2 mb-5" style="width: 50%;"> <!-- Software Engineering */ -->
@@ -115,7 +113,9 @@
 
           <h5 class="card-title">🛠️ | Roblox Studio</h5>
           <hr>
-          <p class="card-text">An overview of where I’ve been, what I’ve learned, and where I’m headed.</p>
+          <p class="card-text">
+            A glimpse into my work, skills, and experience on Roblox Studio.
+          </p>
           <a href="/roblox" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
@@ -124,8 +124,12 @@
 
       <hr style="width: 30%; border-top: 3px solid #07213d;" class="mx-auto my-4">
 
-      <h1>filler</h1>
+      <h1>Introduction</h1>
+      <p class="p text-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusamus eveniet corporis, temporibus maxime ducimus commodi ex nisi dicta aliquam dolorum quaerat sint enim dignissimos vero id, accusantium ad nam.</p>
   </main>
+  <footer>
+    filler
+  </footer>
 </body>
 
 </html>
