Added more information
-Began a new page for SWE.
-Preparing to add multiple projects to said page.
-Finishing landing page UI

--- a/roblox/index.html
+++ b/roblox/index.html
@@ -68,6 +68,10 @@
     </style>
 
     <style>
+      main {
+        background-color: rgb(184, 208, 249);
+      }
+
       #subheader {
         opacity: 0;
         animation: fadeOut 2s ease-in;
@@ -89,7 +93,8 @@
   </header>
 
   <main>
-    <div class="container py-5">
+    <div class="container py-1"></div>
+    <div class="alert alert-danger w-50 text-center mx-auto" role="alert">Commisions closed.</div>
 
       <h1 class="text-center mb-4">Welcome Game Creator</h1>
       <p class="text-center">What this portfolio includes:</p>
