--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h5 class="card-title">💻 | Software Engineering</h5>
           <hr>
           <p class="card-text">An overview of where I’ve been, what I’ve learned, and where I’m headed.</p>
-          <a href="/software" class="btn btn-primary">Go somewhere</a>
+          <a href="/software" class="btn btn-primary">See what's ahead</a>
         </div>
       </div>
 
