--- a/software/index.html
+++ b/software/index.html
@@ -59,28 +59,27 @@
           and scaling.</p>
         <hr>
         <div class="container-fluid mx-auto text-center">
-          <small style="font-size: 0.6em;">A list of frameworks/languages in which the program was made in</small>
+          <small style="font-size: 0.6em;">frameworks/languages used</small>
         </div>
         <div class="container-fluid d-block flex-column p-2">
-          <img width="50" height="50" src="../images/flaskLogo.png" alt="small icon of flask">
-          <img width="50" height="50" src="../images/pythonLogo.png" alt="a small python logo">
-          <img width="50" height="50" src="../images/jsLogo.png" alt="a small java script logo">
-          <img width="50" height="50" src="../images/sqlLogo.webp" alt="a small sequel logo">
-          <img width="50" height="50" src="../images/htmlLogo.png" alt="a small html logo">
-          <img width="50" height="50" src="../images/cssLogo2.png" alt="a small css logo">
+          <img width="30" height="30" src="../images/flaskLogo.png" alt="small icon of flask">
+          <img width="30" height="30" src="../images/pythonLogo.png" alt="a small python logo">
+          <img width="30" height="30" src="../images/jsLogo.png" alt="a small java script logo">
+          <img width="30" height="30" src="../images/sqlLogo.webp" alt="a small sequel logo">
+          <img width="30" height="30" src="../images/htmlLogo.png" alt="a small html logo">
+          <img width="30" height="30" src="../images/cssLogo2.png" alt="a small css logo">
         </div>
       </div>
       <!-- right side -->
       <div class="container col-lg-6" style="background-color: rgb(163, 181, 249);">
         <div class="container rounded-top" style="padding: 0px;"> <!-- Should be a card -->
-          <h2 class="container-fluid" style="background-color: red; color: white;">Todo-list website</h2>
+          <h2 class="container-fluid text-center" style="background-color: rgba(0, 0, 0, 0.375); color: rgb(163, 181, 249);">Todo-list website</h2>
           <div class="ratio ratio-16x9">
             <iframe src="https://www.youtube.com/embed/hL007gbrJ7U?si=VwMyNei8U8LuHs6u" allowfullscreen muted></iframe>
           </div>
-          <pre>
-        Sources
-        Demos
-      </pre>
+          <div style="background-color: rgb(96, 85, 255);">
+          <a href="https://github.com/speed0fLight/portfolioProjects/tree/main/FinalProject" style="text-decoration: none; color: black;"><img height="30" width="30" src="../images/githubLogo.png">Source Code</a> <!-- https://github.com/speed0fLight/portfolioProjects/tree/main/FinalProject -->
+          </div>
           <p>GitHub repo, live demo link</p>
         </div>
       </div>
